fix body wrapper + timeline visibility

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -32,7 +32,7 @@
 
 .Drawer__ctn {
 
-  div[class*="MuiDrawer-paper"] {
+  div:nth-child(2) {
     display: flex;
     flex-direction: column;
     justify-content: center;
